@@ -171,6 +171,10 @@ Use the Xdbe extension? (eliminates flicker) It is highly recommended to use own
 Draw borders around text?
 
 .TP 
+\fBdraw_graph_borders\fR
+Draw borders around graphs?
+
+.TP 
 \fBdraw_shades\fR
 Draw shades?
 
