@@ -1,5 +1,8 @@
 # $Id$
 
+2006-01-05
+	* Added draw_graph_borders option
+
 2006-01-01
 	* Conky 1.3.5 released
 
